docs: Add packJvmVersionSpecificOpts example to README
Added documentation and example usage for the new packJvmVersionSpecificOpts
setting that allows configuring Java version-specific JVM options.

The example shows how to configure different JVM options for Java 8, 11, 17,
and 21, demonstrating common use cases like:
- MaxPermSize for Java 8 (removed in Java 9+)
- JVM compiler options for Java 11
- ZGC garbage collector for Java 17+
- Generational ZGC for Java 21+

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>